# frequent-attenders

./: README.md  pyproject.toml
notebooks/: feat-engineering.ipynb  speedrun-model.ipynb  split-data.ipynb
