[project]
name = "frequent-attenders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=7.0.1",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "orbital>=0.2.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
